--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,6 +1,6 @@
 <h1>餐廳後台</h1>
 <ul>
-  <% restaurants.each do |Restaurant| %>
+  <% @restaurants.each do |Restaurant| %>
   <li>
     <%= restaurant.name %>
     <%= link_to "Show" admin_restaurant_path(restaurant) %>
