--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -13,8 +13,8 @@
     </div>
     <%= f.submit class: "btn btn-primary" %>
     <% if @category.errors.any? %>
-    <%= @category.errors.full_messages.to_sentence %>
-<% end %>
+      <%= @category.errors.full_messages.to_sentence %>
+    <% end %>
   <% end %>
   </div>
   <div class="row">
@@ -33,6 +33,7 @@
           <tr>
             <th scope="row"><%= category.id %></th>
             <td><%= category.name %></td>
+            <td><%= link_to 'Edit', admin_categories_path(id: category.id) %></td>
           </tr>
           <% end %>
         </tbody>
