--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -17,6 +17,7 @@
     <% end %>
   <% end %>
   </div>
+
   <div class="row">
 
     <div class="col-md-12">
@@ -28,12 +29,14 @@
             <th>Category Name</th>
           </tr>
         </thead>
+        <br>
         <tbody>
           <% @categories.each do |category| %>
           <tr>
             <th scope="row"><%= category.id %></th>
             <td><%= category.name %></td>
             <td><%= link_to 'Edit', admin_categories_path(id: category.id) %></td>
+            <td><%= link_to 'Delete', admin_category_path(category), method: :delete, data: { confirm: "Are you sure?"} %></td>
           </tr>
           <% end %>
         </tbody>
