--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,6 +13,12 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :avatar, "Photo" %>
+        <%= image_tag @user.avatar, width: '300px' if @user.avatar? %>
+        <%= f.file_field :avatar %>
+      </div>
+
+      <div class="form-group">
         <%= f.submit class: "btn btn-primary" %>
       </div>
     <% end %>
