--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-md-4 col-sm-6">
-       
+        <%= image_tag @user.avatar, class: "img-responsive img-rounded" %>
     </div>
 
     <div class="col-md-8 col-sm-6">
