--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -23,8 +23,11 @@
 .restaurant-item .caption {
   padding: 10px;
 }
-
 .edit_user img {
   width: 50px;
   margin: 10px;
+}
+.my-restaurant img {
+  max-height: 50px;
+  width: 30%
 }
