--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -32,6 +32,7 @@
 .my-restaurant {
   display: inline-block;
   text-align: center;
+  padding: 5px 5px 5px 5px;
 }
 
 .my-restaurant > div{
@@ -39,6 +40,6 @@
 
 }
 .my-restaurant img {
-  max-height: 100%;
+  height: 100%;
   width:auto;
 }
