add favorite / unfavorite button on index page using shared partial

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,11 +19,7 @@
     <div class="col-md-8">
       <%= simple_format @restaurant.description %>
       <hr>
-      <% if @restaurant.is_favorited?(current_user) %>
-        <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-info" %>
-      <% else %>
-        <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-primary" %>
-      <% end %>
+      <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
     </div>
 
     <div class="clearfix"></div>
