--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -19,6 +19,7 @@
     <div class="col-md-8">
       <%= simple_format @restaurant.description %>
       <hr>
+      <%= link_to 'Dashboard', dashboard_restaurant_path(@restaurant), class: "btn btn-primary" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
       <%= render partial: "shared/like", locals: {restaurant: @restaurant} %>
     </div>
